# autonomous_driving

./: README.md
Working ME416 Ccode for Autonomous Navigation(work with 3 apriltags) 6_27_2023/me416_environment/: CMakeLists.txt  README.md
Working ME416 Ccode for Autonomous Navigation(work with 3 apriltags) 6_27_2023/me416_environment/config/: config.yaml
Working ME416 Ccode for Autonomous Navigation(work with 3 apriltags) 6_27_2023/me416_environment/launch/: maze_environment.launch  me416_environment.launch  me416_world_trial1.launch
Working ME416 Ccode for Autonomous Navigation(work with 3 apriltags) 6_27_2023/me416_environment/models/30x30Maze/: model.config
Working ME416 Ccode for Autonomous Navigation(work with 3 apriltags) 6_27_2023/me416_environment/models/apriltag_36h11_id0/: model.config
Working ME416 Ccode for Autonomous Navigation(work with 3 apriltags) 6_27_2023/me416_environment/models/apriltag_36h11_id0/meshes/: apriltag_36h11_id0.dae
Working ME416 Ccode for Autonomous Navigation(work with 3 apriltags) 6_27_2023/me416_environment/models/apriltag_36h11_id1/: model.config
Working ME416 Ccode for Autonomous Navigation(work with 3 apriltags) 6_27_2023/me416_environment/models/apriltag_36h11_id2/: model.config  model.sdf
Working ME416 Ccode for Autonomous Navigation(work with 3 apriltags) 6_27_2023/me416_environment/models/diff_drive/: parameter.xacro
Working ME416 Ccode for Autonomous Navigation(work with 3 apriltags) 6_27_2023/me416_environment/models/race_track/: model.config  model.sdf
Working ME416 Ccode for Autonomous Navigation(work with 3 apriltags) 6_27_2023/me416_environment/msg/: Bearings.msg
Working ME416 Ccode for Autonomous Navigation(work with 3 apriltags) 6_27_2023/me416_environment/scripts/: bearing_controller_gazebo.py  bearing_measurements_gazebo.py  gazebo_robot_node.py
Working ME416 Ccode for Autonomous Navigation(work with 3 apriltags) 6_27_2023/me416_environment/worlds/: maze_world.world  me416_world.world
Working ME416 Code for Autonomous Navigation (work only when 2 april tags discovered) 6_13_2023/me416_environment/: .gitignore  package.xml  setup.py
Working ME416 Code for Autonomous Navigation (work only when 2 april tags discovered) 6_13_2023/me416_environment/models/30x30Maze/: model.sdf
Working ME416 Code for Autonomous Navigation (work only when 2 april tags discovered) 6_13_2023/me416_environment/models/apriltag_36h11_id0/: model.sdf
Working ME416 Code for Autonomous Navigation (work only when 2 april tags discovered) 6_13_2023/me416_environment/models/apriltag_36h11_id1/: model.sdf
Working ME416 Code for Autonomous Navigation (work only when 2 april tags discovered) 6_13_2023/me416_environment/models/diff_drive/: diff_drive.gazebo  diff_drive.xacro
Working ME416 Code for Autonomous Navigation (work only when 2 april tags discovered) 6_13_2023/me416_environment/msg/: Bearings.msg
Working ME416 Code for Autonomous Navigation (work only when 2 april tags discovered) 6_13_2023/me416_environment/scripts/: bearing_controller_gazebo.py  bearing_measurements_gazebo.py  key_op.py  motor_command.py
Working ME416 Code for Autonomous Navigation (work only when 2 april tags discovered) 6_13_2023/me416_environment/scripts/me416_environment/: motor_command_model.py
Working ME416 Code for Autonomous Navigation (work only when 2 april tags discovered) 6_13_2023/me416_environment/worlds/: me416_world.world  me416_world_trial1.world
images/: README.md
(+16 files in other folders)
