<?xml version="1.0"?>
<package format="2">
  <name>me416_environment</name>
  <version>0.0.0</version>
  <description>The me416_environment package for the differential drive robot</description>

  <maintainer email="tron@bu.edu">R.Tron</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>gazebo_ros</buildtool_depend>
  <!-- <buildtool_depend>apriltag_ros</buildtool_depend> -->

  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>apriltag_ros</build_depend>
  <!-- <build_depend>gazebo_msgs</build_depend> -->
  <build_depend>me416_lab</build_depend>

  <!-- <build_export_depend>gazebo</build_export_depend>-->
  <!-- <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend> -->

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <!-- <exec_depend>gazebo_msgs</exec_depend> -->
  <exec_depend>me416_lab</exec_depend>



  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models" />
  </export>

</package>
